--- a/cppsimulator/cppsimulator/cppsimulator.vcxproj.filters
+++ b/cppsimulator/cppsimulator/cppsimulator.vcxproj.filters
@@ -915,10 +915,10 @@
     <ClInclude Include="Primitive.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="built_in_primitives.h">
+    <ClInclude Include="VCDWiter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="VCDWiter.h">
+    <ClInclude Include="built_in_primitives.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -950,10 +950,10 @@
     <ClCompile Include="Source.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
-    <ClCompile Include="builtin_primitives.cpp">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="VCDWiter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="builtin_primitives.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
