--- a/cppsimulator/cppsimulator/cppsimulator.vcxproj.filters
+++ b/cppsimulator/cppsimulator/cppsimulator.vcxproj.filters
@@ -936,6 +936,9 @@
     <ClInclude Include="netFlowVector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HostEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="builtin_primitives.cpp">
@@ -972,6 +975,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="VCDWiter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HostEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
